--- a/grader/src/main/resources/index.html
+++ b/grader/src/main/resources/index.html
@@ -24,9 +24,10 @@
 		}
 		textarea {
 			min-height: 10em;
+			font-family: monospace;
 		}
 
-		#problems {
+		#problems, #runs, #problem-new {
 			padding-top: 1em;
 		}
 
@@ -146,7 +147,16 @@
 				<!-- Tab panes -->
 				<div class="tab-content">
 					<div role="tabpanel" class="tab-pane active" id="problems"></div>
-					<div role="tabpanel" class="tab-pane" id="runs"></div>
+					<div role="tabpanel" class="tab-pane" id="runs">
+						<div class="row">
+							<div class="col-md-8">
+								<div id="runs-list"></div>
+							</div>
+							<div class="col-md-4">
+								<div id="runs-details"></div>
+							</div>
+						</div>
+					</div>
 					<div role="tabpanel" class="tab-pane" id="problem-new">
 					</div>
 				</div>
@@ -158,7 +168,7 @@
 		<script src="https://omegaup.com/js/pagedown/Markdown.Converter.js"></script>
 		<script src="https://omegaup.com/js/pagedown/Markdown.Sanitizer.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/JSXTransformer.js"></script>
 		<script src="https://omegaup.com/js/mathjax-config.js"></script>
 		<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -199,7 +209,7 @@
 							<div className="panel-body">
 								<form className="form-horizontal" onSubmit={this.handleSubmit}>
 									<div className="form-group">
-										<label for={languageId}  className="col-sm-2 control-label">Lenguaje</label>
+										<label htmlFor={languageId}  className="col-sm-2 control-label">Lenguaje</label>
 										<div className="col-sm-10">
 											<select defaultValue="cpp11" id={languageId} ref="language" className="form-control">
 												<option value="c">C</option>
@@ -212,16 +222,16 @@
 										</div>
 									</div>
 									<div className="form-group">
-										<label for={codeId} className="col-sm-2 control-label">Código</label>
+										<label htmlFor={codeId} className="col-sm-2 control-label">Código</label>
 										<div className="col-sm-10">
 											<textarea ref="code" className="form-control" id={codeId} />
 										</div>
 									</div>
-									 <div className="form-group">
-										 <div className="col-sm-offset-2 col-sm-10">
+									<div className="form-group">
+										<div className="col-sm-offset-2 col-sm-10">
 											<button type="submit" className="btn btn-default">Enviar</button>
-										 </div>
-									 </div>
+										</div>
+									</div>
 								</form>
 							</div>
 						</div>
@@ -262,27 +272,27 @@
 								<h3 className="panel-title">Crear problema</h3>
 							</div>
 							<div className="panel-body">
-								<form className="form" enctype="multipart/form-data" onSubmit={this.handleSubmit} ref="form">
+								<form className="form" encType="multipart/form-data" onSubmit={this.handleSubmit} ref="form">
 									<div className="row">
 										<div className="form-group col-md-6">
-											<label for="problem_contents">Archivo</label>
+											<label htmlFor="problem_contents">Archivo</label>
 											<input ref="problem_contents" type="file" className="form-control" />
 										</div>
 
 										<div className="form-group  col-md-6">
-											<label for="title">Título</label>
+											<label htmlFor="title">Título</label>
 											<input id="title" ref="title" type="text" className="form-control" />
 										</div>
 									</div>
 
 									<div className="row">
 										<div className="form-group  col-md-6">
-											<label for="alias">Alias</label>
+											<label htmlFor="alias">Alias</label>
 											<input id="alias" ref="alias" type="text" className="form-control"/>
 										</div>
 
 										<div className="form-group col-md-6">
-											<label for="validator">Tipo de validador</label>
+											<label htmlFor="validator">Tipo de validador</label>
 											<select ref="validator" id="validator" className="form-control" >
 												<option value="token-caseless">Token por token, ignorando mayúsculas/minúsculas</option>
 												<option value="token-numeric">Tokens numéricos con tolerancia</option>
@@ -295,36 +305,36 @@
 
 									<div className="row">
 										<div className="form-group  col-md-6">
-											<label for="time_limit">Tiempo límite (s)</label>
+											<label htmlFor="time_limit">Tiempo límite (s)</label>
 											<input id="time_limit" ref="time_limit" defaultValue="1" type="text" className="form-control" />
 										</div>
 
 										<div className="form-group col-md-6">
-											<label for="overall_wall_time_limit">Tiempo límite total (s)</label>
+											<label htmlFor="overall_wall_time_limit">Tiempo límite total (s)</label>
 											<input id="overall_wall_time_limit" ref="overall_wall_time_limit" defaultValue="60" type="text" className="form-control" />
 										</div>
 									</div>
 
 									<div className="row">
 										<div className="form-group col-md-6">
-											<label for="extra_wall_time">Tiempo extra para libinteractive (s)</label>
+											<label htmlFor="extra_wall_time">Tiempo extra para libinteractive (s)</label>
 											<input id="extra_wall_time" ref="extra_wall_time" defaultValue="0" type="text" className="form-control" />
 										</div>
 
 										<div className="form-group  col-md-6">
-											<label for="memory_limit">Límite de memoria (MB)</label>
+											<label htmlFor="memory_limit">Límite de memoria (MB)</label>
 											<input id="memory_limit" ref="memory_limit" defaultValue="32" type="text" className="form-control" />
 										</div>
 									</div>
 
 									<div className="row">
 										<div className="form-group  col-md-6">
-											<label for="output_limit">Límite de salida (kB)</label>
+											<label htmlFor="output_limit">Límite de salida (kB)</label>
 											<input id="output_limit" ref="output_limit" defaultValue="10" type="text" className="form-control" />
 										</div>
 
 										<div className="form-group  col-md-6">
-											<label for="stack_limit">Límite de pila (kB)</label>
+											<label htmlFor="stack_limit">Límite de pila (kB)</label>
 											<input id="stack_limit" ref="stack_limit" defaultValue="1024" type="text" className="form-control" />
 										</div>
 									</div>
@@ -397,7 +407,10 @@
 				},
 				componentDidMount: function() {
 					this.updateProblemList();
-					$(document).on('problem-update', this.updateProblemList.bind(this));
+					$(document).on('problem-update', this.updateProblemList);
+				},
+				componentWillUnount: function() {
+					$(document).off('problem-update', this.updateProblemList);
 				},
 				componentDidUpdate: function (props, state, root) {
 					$('.nav-tabs').tab();
@@ -406,14 +419,16 @@
 					var tabNodes = this.state.problems.map(function (problem) {
 						var id = 'problems_' + problem.id;
 						var href = '#' + id;
+						var key = 'tab_' + problem.id;
 						return (
-							<li role="presentation"><a href={href} aria-controls={id} role="tab" data-toggle="pill">{problem.title}</a></li>
+							<li role="presentation" key={key}><a href={href} aria-controls={id} role="tab" data-toggle="pill">{problem.title}</a></li>
 						);
 					});
 					var problemNodes = this.state.problems.map(function (problem) {
 						var id = 'problems_' + problem.id;
+						var key = 'problem_' + problem.id;
 						return (
-							<div role="tabpanel" className="tab-pane" id={id}>
+							<div role="tabpanel" className="tab-pane" id={id} key={key}>
 								<Problem problem={problem} />
 							</div>
 						);
@@ -435,9 +450,120 @@
 				}
 			});
 
-			var Run = React.createClass({
+			var RunDetails = React.createClass({
 				getInitialState: function() {
-					return {run: this.props.run};
+					return {id: null, run: []};
+				},
+				updateDetails: function(e, state) {
+					this.setState(state);
+				},
+				componentDidMount: function() {
+					$(document).on('details-update', this.updateDetails);
+				},
+				componentWillUnount: function() {
+					$(document).off('details-update', this.updateDetails);
+				},
+				render: function() {
+					if (!this.state.id) return <div/>;
+					var source = this.state.run.source;
+					var compileErrorNodes = "";
+					if (this.state.run.compile_error) {
+						compileErrorNodes = (
+							<div>
+								<hr/>
+								<pre>{this.state.run.compile_error}</pre>
+							</div>
+						);
+					}
+					var groupNodes = (this.state.run.groups || []).map(function (group) {
+						var score = group.score.toFixed(2);
+						if (group.cases.length == 1) {
+							return (
+								<tbody>
+									<tr>
+										<th>{group.group}</th>
+										<td></td>
+										<td>{group.cases[0].verdict}</td>
+										<th className="score">{group.score}</th>
+									</tr>
+								</tbody>
+							);
+						} else {
+							return (
+								<tbody>
+									<tr>
+										<th>{group.group}</th>
+										<td></td>
+										<td></td>
+										<th className="score">{group.score}</th>
+									</tr>
+									{group.cases.map(function (c) {
+										return (
+											<tr>
+												<td></td>
+												<td>{c.name}</td>
+												<td>{c.verdict}</td>
+												<td className="score">{c.score}</td>
+											</tr>
+										);
+									})}
+								</tbody>
+							);
+						}
+					});
+
+					return (
+						<div className="panel panel-default">
+							<div className="panel-heading">{this.state.id}</div>
+							<div className="panel-body">
+								<pre>{this.state.run.source}</pre>
+								{compileErrorNodes}
+							</div>
+							<table className="table">
+								<thead>
+									<tr>
+										<th>Grupo</th>
+										<th>Caso</th>
+										<th>Veredicto</th>
+										<th>Puntos</th>
+									</tr>
+								</thead>
+								{groupNodes}
+							</table>
+						</div>
+					);
+				}
+			});
+
+			var Run = React.createClass({
+				handleRunDetails: function() {
+					$.ajax({
+						url: '/run/' + this.props.run.id + '/status/',
+						success: function(data) {
+							$(document).trigger('details-update',
+								{id: this.props.run.id, run: data});
+						}.bind(this),
+						error: handleAjaxError,
+					});
+				},
+				handleRunRejudge: function() {
+					var data = {
+						id: [this.props.run.id],
+						debug: false,
+						rejudge: true
+					};
+					$.ajax({
+						url: '/run/grade/',
+						method: 'POST',
+						dataType: 'json',
+						data: JSON.stringify(data),
+						processData: false,
+						contentType: false,
+						success: function(data) {
+							$(document).trigger('run-update');
+						}.bind(this),
+						error: handleAjaxError,
+					});
 				},
 				render: function() {
 					var runtime = this.props.run.runtime.toFixed(3);
@@ -452,6 +578,8 @@
 							<td>{score}</td>
 							<td>{runtime}</td>
 							<td>{memory}</td>
+							<td><button onClick={this.handleRunRejudge} className="glyphicon glyphicon-repeat" title="Reevaluar"></button></td>
+							<td><button onClick={this.handleRunDetails} className="glyphicon glyphicon-zoom-in" title="Detalles"></button></td>
 						</tr>
 					);
 				}
@@ -477,14 +605,12 @@
 				},
 				componentDidMount: function() {
 					this.updateRunList();
-					$(document).on('run-update', this.updateRunList.bind(this));
+					$(document).on('run-update', this.updateRunList);
+				},
+				componentWillUnmount: function() {
+					$(document).off('run-update', this.updateRunList);
 				},
 				render: function() {
-					var runNodes = this.state.runs.map(function (run) {
-						return (
-							<Run run={run} />
-						);
-					});
 					return (
 						<table>
 							<tr>
@@ -495,15 +621,20 @@
 								<th>Puntos</th>
 								<th>Tiempo</th>
 								<th>Memoria</th>
+								<th></th>
+								<th></th>
 							</tr>
-							{runNodes}
+							{this.state.runs.map(function (run) {
+								return <Run key={run.id} run={run} />;
+							})}
 						</table>
 					);
 				}
 			});
 
 			React.render(<ProblemView />, document.getElementById("problems"));
-			React.render(<RunView />, document.getElementById("runs"));
+			React.render(<RunDetails />, document.getElementById("runs-details"));
+			React.render(<RunView />, document.getElementById("runs-list"));
 			React.render(<ProblemNew />, document.getElementById("problem-new"));
 		});
 		</script>
